--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
-<img src="[PRESSKIT Allons y V1] (importée)" width="5067" height="3508" border="0" usemap="#map" />
+<img src="[PRESSKIT Allons y V1]" width="5067" height="3508" border="0" usemap="#map" />
 
-<map name="map">
-<!-- #$-:Image map file created by GIMP Image Map plug-in -->
-<!-- #$-:GIMP Image Map plug-in by Maurits Rijk -->
-<!-- #$-:Please do not edit lines starting with "#$" -->
-<!-- #$VERSION:2.3 -->
-<!-- #$AUTHOR:Pryeur Bacdav -->
 <area shape="rect" coords="545,2411,1693,2698" href="https://soundcloud.com/veiga000/sets/ep-allons-y/s-1YmZxeReBdR?si=d3a4f0dc06a14779a61684391b7c2faf" />
 <area shape="rect" coords="2789,35,2990,235" href="https://www.instagram.com/veiga000/" />
 <area shape="rect" coords="3267,30,3480,228" href="https://twitter.com/VEIGA_000" />
