--- a/index.html
+++ b/index.html
@@ -246,96 +246,96 @@
 <!-- Save for Web Slices (PRESSKIT Allons y V1.png) -->
 <div id="Tableau_01">
 	<div id="PRESSKIT-Allons-y-V1-01">
-		<img src="images/PRESSKIT-Allons-y-V1_01.jpg" width="1419" height="6" alt="">
+		<img src="PRESSKIT-Allons-y-V1_01.jpg" width="1419" height="6" alt="">
 	</div>
 	<div id="PRESSKIT-Allons-y-V1-02">
-		<img src="images/PRESSKIT-Allons-y-V1_02.jpg" width="779" height="669" alt="">
+		<img src="PRESSKIT-Allons-y-V1_02.jpg" width="779" height="669" alt="">
 	</div>
 	<div id="Instagram">
 		<a href="https://www.instagram.com/veiga000/" target="_blank">
-			<img src="images/Instagram.jpg" width="59" height="60" border="0" alt=""></a>
+			<img src="Instagram.jpg" width="59" height="60" border="0" alt=""></a>
 	</div>
 	<div id="PRESSKIT-Allons-y-V1-04">
-		<img src="images/PRESSKIT-Allons-y-V1_04.jpg" width="79" height="757" alt="">
+		<img src="PRESSKIT-Allons-y-V1_04.jpg" width="79" height="757" alt="">
 	</div>
 	<div id="Twitter">
 		<a href="https://twitter.com/VEIGA_000" target="_blank">
-			<img src="images/Twitter.jpg" width="59" height="60" border="0" alt=""></a>
+			<img src="Twitter.jpg" width="59" height="60" border="0" alt=""></a>
 	</div>
 	<div id="PRESSKIT-Allons-y-V1-06">
-		<img src="images/PRESSKIT-Allons-y-V1_06.jpg" width="66" height="757" alt="">
+		<img src="PRESSKIT-Allons-y-V1_06.jpg" width="66" height="757" alt="">
 	</div>
 	<div id="Youtube">
 		<a href="https://www.youtube.com/channel/UCcV257tNdCsA8as3I1v3jYA" target="_blank">
-			<img src="images/Youtube.jpg" width="81" height="60" border="0" alt=""></a>
+			<img src="Youtube.jpg" width="81" height="60" border="0" alt=""></a>
 	</div>
 	<div id="PRESSKIT-Allons-y-V1-08">
-		<img src="images/PRESSKIT-Allons-y-V1_08.jpg" width="62" height="757" alt="">
+		<img src="PRESSKIT-Allons-y-V1_08.jpg" width="62" height="757" alt="">
 	</div>
 	<div id="Spotify">
 		<a href="https://open.spotify.com/artist/1mbSvcnVbN4iVwLEaTnJQd" target="_blank">
-			<img src="images/Spotify.jpg" width="56" height="60" border="0" alt=""></a>
+			<img src="Spotify.jpg" width="56" height="60" border="0" alt=""></a>
 	</div>
 	<div id="PRESSKIT-Allons-y-V1-10">
-		<img src="images/PRESSKIT-Allons-y-V1_10.jpg" width="178" height="23" alt="">
+		<img src="PRESSKIT-Allons-y-V1_10.jpg" width="178" height="23" alt="">
 	</div>
 	<div id="PRESSKIT-Allons-y-V1-11">
-		<img src="images/PRESSKIT-Allons-y-V1_11.jpg" width="95" height="953" alt="">
+		<img src="PRESSKIT-Allons-y-V1_11.jpg" width="95" height="953" alt="">
 	</div>
 	<div id="Links">
 		<a href="https://linktr.ee/veiga000" target="_blank">
-			<img src="images/Links.jpg" width="39" height="177" border="0" alt=""></a>
+			<img src="Links.jpg" width="39" height="177" border="0" alt=""></a>
 	</div>
 	<div id="PRESSKIT-Allons-y-V1-13">
-		<img src="images/PRESSKIT-Allons-y-V1_13.jpg" width="44" height="953" alt="">
+		<img src="PRESSKIT-Allons-y-V1_13.jpg" width="44" height="953" alt="">
 	</div>
 	<div id="PRESSKIT-Allons-y-V1-14">
-		<img src="images/PRESSKIT-Allons-y-V1_14.jpg" width="59" height="916" alt="">
+		<img src="PRESSKIT-Allons-y-V1_14.jpg" width="59" height="916" alt="">
 	</div>
 	<div id="PRESSKIT-Allons-y-V1-15">
-		<img src="images/PRESSKIT-Allons-y-V1_15.jpg" width="59" height="697" alt="">
+		<img src="PRESSKIT-Allons-y-V1_15.jpg" width="59" height="697" alt="">
 	</div>
 	<div id="PRESSKIT-Allons-y-V1-16">
-		<img src="images/PRESSKIT-Allons-y-V1_16.jpg" width="81" height="697" alt="">
+		<img src="PRESSKIT-Allons-y-V1_16.jpg" width="81" height="697" alt="">
 	</div>
 	<div id="PRESSKIT-Allons-y-V1-17">
-		<img src="images/PRESSKIT-Allons-y-V1_17.jpg" width="56" height="697" alt="">
+		<img src="PRESSKIT-Allons-y-V1_17.jpg" width="56" height="697" alt="">
 	</div>
 	<div id="PRESSKIT-Allons-y-V1-18">
-		<img src="images/PRESSKIT-Allons-y-V1_18.jpg" width="39" height="776" alt="">
+		<img src="PRESSKIT-Allons-y-V1_18.jpg" width="39" height="776" alt="">
 	</div>
 	<div id="PRESSKIT-Allons-y-V1-19">
-		<img src="images/PRESSKIT-Allons-y-V1_19.jpg" width="153" height="307" alt="">
+		<img src="PRESSKIT-Allons-y-V1_19.jpg" width="153" height="307" alt="">
 	</div>
 	<div id="Ecouterx20l-EP">
 		<a href="https://soundcloud.com/veiga000/sets/ep-allons-y/s-1YmZxeReBdR?si=d3a4f0dc06a14779a61684391b7c2faf" target="_blank">
-			<img src="images/Ecouter-l'EP.jpg" width="321" height="82" border="0" alt=""></a>
+			<img src="Ecouter-l'EP.jpg" width="321" height="82" border="0" alt=""></a>
 	</div>
 	<div id="PRESSKIT-Allons-y-V1-21">
-		<img src="images/PRESSKIT-Allons-y-V1_21.jpg" width="305" height="307" alt="">
+		<img src="PRESSKIT-Allons-y-V1_21.jpg" width="305" height="307" alt="">
 	</div>
 	<div id="PRESSKIT-Allons-y-V1-22">
-		<img src="images/PRESSKIT-Allons-y-V1_22.jpg" width="321" height="225" alt="">
+		<img src="PRESSKIT-Allons-y-V1_22.jpg" width="321" height="225" alt="">
 	</div>
 	<div id="PRESSKIT-Allons-y-V1-23">
-		<img src="images/PRESSKIT-Allons-y-V1_23.jpg" width="47" height="219" alt="">
+		<img src="PRESSKIT-Allons-y-V1_23.jpg" width="47" height="219" alt="">
 	</div>
 	<div id="Telechargerx20Photos">
 		<a href="https://www.dropbox.com/sh/5xfbkjsup2u4a7m/AAAVJlsVgEO4TwGgl1srPgoNa?dl=0" target="_blank">
-			<img src="images/Telecharger-Photos.jpg" width="328" height="48" border="0" alt=""></a>
+			<img src="Telecharger-Photos.jpg" width="328" height="48" border="0" alt=""></a>
 	</div>
 	<div id="PRESSKIT-Allons-y-V1-25">
-		<img src="images/PRESSKIT-Allons-y-V1_25.jpg" width="28" height="219" alt="">
+		<img src="PRESSKIT-Allons-y-V1_25.jpg" width="28" height="219" alt="">
 	</div>
 	<div id="PRESSKIT-Allons-y-V1-26">
-		<img src="images/PRESSKIT-Allons-y-V1_26.jpg" width="328" height="25" alt="">
+		<img src="PRESSKIT-Allons-y-V1_26.jpg" width="328" height="25" alt="">
 	</div>
 	<div id="Telechargerx20E-P">
 		<a href="https://www.dropbox.com/scl/fo/4nqtwbh0f9o9psxrcs8oy/h?dl=0&rlkey=z7emgk49muae1gdaie2u33sn9" target="_blank">
-			<img src="images/Telecharger-E.P.jpg" width="328" height="48" border="0" alt=""></a>
+			<img src="Telecharger-E.P.jpg" width="328" height="48" border="0" alt=""></a>
 	</div>
 	<div id="PRESSKIT-Allons-y-V1-28">
-		<img src="images/PRESSKIT-Allons-y-V1_28.jpg" width="328" height="98" alt="">
+		<img src="PRESSKIT-Allons-y-V1_28.jpg" width="328" height="98" alt="">
 	</div>
 </div>
 <!-- End Save for Web Slices -->
